project/pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 6578
      protocol: TCP
      targetPort: 7999
