project/pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  annotations:
    #   nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  rules: 
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 6578
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 2345
